[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "triage-agent"
version = "0.1.0"
description = "Citizen-facing triage agent powered by LangChain and Gemini"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.6",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]
